--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            width: 100px; /* Adjust the width as needed */
+            height: 100px; /* Adjust the height as needed */
             animation: spin 3s linear infinite;
         }
 
@@ -26,6 +28,6 @@
     </style>
 </head>
 <body>
-    <img id="trollFace" src="https://th.bing.com/th/id/R.a38d84b23ca539ced7b19724582a37c1?rik=jsGZm5HMJE5NIg&pid=ImgRaw&r=0" alt="Troll Face">
+    <img id="trollFace" src="https://example.com/path/to/troll-face.png" alt="Troll Face">
 </body>
 </html>
