--- a/index.html
+++ b/index.html
@@ -1,33 +1,335 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spinning Troll Face</title>
-    <style>
-        body {
-            margin: 0;
-            overflow: hidden;
-            background-color: #808080; /* Gray background */
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Global Chat</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #36393f; /* Discord-like background color */
+      color: #ffffff;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+    }
 
-        #trollFace {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 100px; /* Adjust the width as needed */
-            height: 100px; /* Adjust the height as needed */
-            animation: spin 3s linear infinite;
-        }
+    #app {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+    }
 
-        @keyframes spin {
-            0% { transform: translate(-50%, -50%) rotate(0deg); }
-            100% { transform: translate(-50%, -50%) rotate(360deg); }
-        }
-    </style>
+    .main-content {
+      display: flex;
+      flex: 1;
+      height: 0;
+    }
+
+    .chat-container {
+      flex: 1;
+      overflow: hidden;
+      display: flex;
+      flex-direction: column;
+      border-radius: 8px;
+      background-color: #36393f; /* Discord-like background color */
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .header {
+      background-color: #40444b; /* Discord-like header color */
+      padding: 10px;
+      border-bottom: 1px solid #3c4043;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .user-settings {
+      margin-left: 10px;
+      font-size: 12px;
+      cursor: pointer;
+      color: #7289da; /* Discord-like accent color */
+    }
+
+    .profile {
+      display: flex;
+      align-items: center;
+      color: #ffffff;
+      margin-right: 10px; /* Added margin to move it a little to the right */
+    }
+
+    .profile img {
+      border-radius: 50%;
+      margin-right: 10px;
+    }
+
+    .owner-tag {
+      background-color: #7289da; /* Discord-like accent color */
+      color: #ffffff;
+      padding: 3px 6px;
+      font-size: 10px;
+      margin-left: 5px;
+      border-radius: 3px;
+    }
+
+    .user-list {
+      padding: 10px;
+      overflow-y: auto;
+      max-height: 200px;
+    }
+
+    .user-list-item {
+      margin-bottom: 5px;
+      color: #ffffff;
+    }
+
+    .messages {
+      flex: 1;
+      padding: 10px;
+      overflow-y: auto;
+      background-color: #36393f; /* Discord-like background color */
+    }
+
+    .message {
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 10px;
+      background-color: #40444b; /* Discord-like message box color */
+      border-radius: 8px;
+      padding: 10px;
+    }
+
+    .message p {
+      margin: 0;
+      color: #ffffff;
+    }
+
+    .timestamp {
+      color: #72767d;
+      font-size: 10px;
+      margin-top: 5px;
+    }
+
+    .input-container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px;
+      border-top: 1px solid #3c4043;
+    }
+
+    .input-container input {
+      flex: 1;
+      padding: 8px;
+      margin-right: 10px;
+      border: none;
+      border-radius: 5px;
+      background-color: #40444b; /* Discord-like input box color */
+      color: #ffffff;
+    }
+
+    .input-container button {
+      background-color: #7289da; /* Discord-like accent color */
+      color: #ffffff;
+      border: none;
+      padding: 8px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .user-settings-popup {
+      position: absolute;
+      bottom: 50px;
+      left: 10px;
+      background-color: #36393f; /* Discord-like background color */
+      border-radius: 8px;
+      padding: 10px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      display: none;
+    }
+
+    .user-settings-popup input {
+      margin-bottom: 10px;
+    }
+
+    .user-settings-popup button {
+      background-color: #7289da; /* Discord-like accent color */
+      color: #ffffff;
+      border: none;
+      padding: 8px 15px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .user-settings-popup button.cancel {
+      margin-left: 10px;
+      background-color: #36393f; /* Discord-like background color */
+    }
+
+    .user-settings-popup.active {
+      display: block;
+    }
+  </style>
 </head>
+
 <body>
-    <img id="trollFace" src="https://example.com/path/to/troll-face.png" alt="Troll Face">
+
+  <div id="app"></div>
+
+  <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script>
+    new Vue({
+      el: '#app',
+      data: {
+        messages: [],
+        users: [],
+        messageInput: '',
+        currentUser: {
+          username: localStorage.getItem('username') || 'User',
+          tag: localStorage.getItem('userTag') || '',
+          profilePicture: localStorage.getItem('userProfilePicture') || 'https://via.placeholder.com/50',
+        },
+        isEditingProfile: false,
+        editedProfile: {
+          username: '',
+          tag: '',
+          profilePicture: '',
+        },
+        showEmojiPicker: false,
+        selectedEmoji: '',
+        emojiList: ['😊', '😂', '😍', '👍', '👎', '🙌', '🎉', '🔥', '❤️', '🚀'],
+        showUserSettings: false,
+      },
+      created() {
+        if (!this.currentUser.tag) {
+          this.currentUser.tag = '#' + Math.floor(1000 + Math.random() * 9000);
+          localStorage.setItem('userTag', this.currentUser.tag);
+        }
+
+        // Simulating user join
+        this.users.push({
+          username: this.currentUser.username,
+          tag: this.currentUser.tag,
+          profilePicture: this.currentUser.profilePicture,
+        });
+      },
+      methods: {
+        sendMessage() {
+          const message = this.messageInput.trim();
+          if (message !== '') {
+            const newMessage = {
+              text: message,
+              user: {
+                username: this.currentUser.username,
+                tag: this.currentUser.tag,
+                profilePicture: this.currentUser.profilePicture,
+              },
+              timestamp: new Date().toLocaleTimeString(),
+            };
+            this.messages.push(newMessage);
+            this.messageInput = '';
+          }
+        },
+        startEditingProfile() {
+          this.isEditingProfile = true;
+          this.editedProfile.username = this.currentUser.username;
+          this.editedProfile.tag = this.currentUser.tag;
+          this.editedProfile.profilePicture = this.currentUser.profilePicture;
+        },
+        saveProfileChanges() {
+          this.currentUser.username = this.editedProfile.username;
+          this.editedProfile.tag = this.currentUser.tag;
+          this.currentUser.profilePicture = this.editedProfile.profilePicture;
+          this.isEditingProfile = false;
+        },
+        removeUser(user) {
+          const index = this.users.indexOf(user);
+          if (index !== -1) {
+            this.users.splice(index, 1);
+          }
+        },
+        handleFileUpload(event) {
+          const file = event.target.files[0];
+          if (file) {
+            const reader = new FileReader();
+            reader.onload = () => {
+              this.editedProfile.profilePicture = reader.result;
+            };
+            reader.readAsDataURL(file);
+          }
+        },
+        toggleEmojiPicker() {
+          this.showEmojiPicker = !this.showEmojiPicker;
+        },
+        selectEmoji(emoji) {
+          this.selectedEmoji = emoji;
+          this.messageInput += emoji;
+          this.showEmojiPicker = false;
+        },
+        toggleUserSettings() {
+          this.showUserSettings = !this.showUserSettings;
+        },
+      },
+      template: `
+        <div id="app">
+          <div class="main-content">
+            <div class="chat-container">
+              <div class="header">
+                <div class="user-settings" @click="toggleUserSettings">User Settings</div>
+              </div>
+              <div class="user-list">
+                <div v-for="user in users" :key="user.username" class="user-list-item">
+                  {{ user.username + user.tag }}
+                  <button @click="removeUser(user)">Remove</button>
+                </div>
+              </div>
+              <div class="messages">
+                <div v-for="(message, index) in messages" :key="index" class="message">
+                  <div class="profile">
+                    <img :src="message.user.profilePicture" alt="Profile" style="width: 20px; height: 20px; margin-right: 5px; border-radius: 50%;">
+                    <span>{{ message.user.username + message.user.tag }}</span>
+                  </div>
+                  <p>{{ message.text }}</p>
+                  <span class="timestamp">{{ message.timestamp }}</span>
+                </div>
+              </div>
+              <div class="input-container">
+                <input v-model="messageInput" type="text" placeholder="Type your message" @keyup.enter="sendMessage">
+                <button @click="toggleEmojiPicker">😊</button>
+                <div v-if="showEmojiPicker" class="emoji-picker">
+                  <button v-for="emoji in emojiList" :key="emoji" @click="selectEmoji(emoji)">{{ emoji }}</button>
+                </div>
+                <button @click="sendMessage">Send</button>
+              </div>
+              <!-- Move the profile section here -->
+              <div class="profile" @click="startEditingProfile">
+                <img :src="currentUser.profilePicture" alt="Profile" style="width: 30px; height: 30px; border-radius: 50%;">
+                <div style="margin-left: 10px;"> <!-- Added margin to move it a little to the right -->
+                  <span>{{ currentUser.username }}</span>
+                  <span class="owner-tag">{{ currentUser.tag }}</span>
+                </div>
+              </div>
+            </div>
+            <div class="user-settings-popup" :class="{ 'active': showUserSettings }">
+              <input v-model="editedProfile.username" type="text" placeholder="Enter username">
+              <input type="file" @change="handleFileUpload">
+              <button @click="saveProfileChanges">Save</button>
+              <button class="cancel" @click="toggleUserSettings">Cancel</button>
+            </div>
+          </div>
+        </div>
+      `,
+    });
+  </script>
+
 </body>
+
 </html>
