--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta name="description" content="Login to your Roblox account or sign up to create a new account." />
 <meta name="keywords" content="free games, online games, building games, virtual worlds, free mmo, gaming cloud, physics engine" />
 
-    <meta name="apple-itunes-app" content="app-id=431946152" />
+    <meta name="itunes-app" content="app-id=431946152" />
 
 
 
